--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             seu currículo online. Assim, tenha cuidado ao realizar modificações para uma vaga específica, pois todas as
             empresas terão acesso às alteracões realizadas.</span> <br><br>
 
-        <form method="" action="">
+        <form method="post" action="">
 
 
             <div class="inputContainer">
@@ -32,7 +32,7 @@
                     <br>
 
                     <label for="email" name="email">Email <span id="obrigatorio">(Obrigatório)</span></label>
-                    <input type="text" name="email" class="inputDados" required>
+                    <input type="email" name="email" class="inputDados" required>
                     <br>
 
                     <label for="telefone" name="telefone">Celular <span id="obrigatorio">(Obrigatório)</span></label>
@@ -44,7 +44,7 @@
                     <br>
 
                     <label for="cep" name="cep">Cep</label>
-                    <input type="text" name="cep" class="inputDados" maxlength="8">
+                    <input type="number" name="cep" class="inputDados" maxlength="8">
                     <br>
 
                     <label for="data-nascimento" name="data-nascimento"><b>Data de Nascimento: </b></label>
