--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <br>
 
                     <label for="cep" name="cep">Cep</label>
-                    <input type="number" name="cep" class="inputDados" maxlength="8">
+                    <input type="text" name="cep" class="inputDados" maxlength="8">
                     <br>
 
                     <label for="data-nascimento" name="data-nascimento"><b>Data de Nascimento: </b></label>
